# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-11-12 mmichaud <m.michael.michaud@orange.fr>
  * Fix #442 Missing unsaved layers warning in SaveProjectPlugIn

2016-11-11 mmichaud <m.michael.michaud@orange.fr>
  * Add 3 functions in GeometryFunction plugin
    - Simplifier (Remove small segments)
    - Remove Holes (FR #248)
    - Remove Small Holes

2016-11-08 Giuseppe Aruta
  * Sextante: activated Sextante help for single algorithms
  * Sextante: Sextante tables are decoded from OJ vector files
    with all features with empy geometries
  
2016-11-06 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #439 MakeValid now uses SymDifference instead of difference to
    repair overlapping holes (which corresponds what is displayed on screen)
  * Add a selection mode to select features with a Multi-Geometry type

2016-11-05 mmichaud <m.michael.michaud@orange.fr>
  * Writable PostGIS driver apply a ST_Multi transformation to geometries
    if it detected that the distant table has a MultiGeometry constraint
  * Add two geometry functions to wrap/unwrap geom into/from multigeometry

2016-11-04 mmichaud <m.michael.michaud@orange.fr>
  * Add two plugins to generate random values in an attribute

2016-11-01 mmichaud <m.michael.michaud@orange.fr>
  * Fix #438 Exception while saving the project before closing application

2016-10-31 Giuseppe Aruta
  * October Sextante sprint code:
    - Added Sextante Data Explorer and Pick Coordinates plugins
    - Better integration between OpenJUMP and Sextante data model
    - Upgraded documentation with a new help dialog style
    - Fix bugs #410 and #427

2016-10-30 ede
  * autowrap Toolbar if the workbench frame gets too small to fit all entries
    in one line

2016-10-30 mmichaud <m.michael.michaud@orange.fr>